Tarea Clase Libro

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /ConceptosBasicos/nbproject/private/
 /Clases/Conceptos basicos/nbproject/private/
 diagramaBD.img
+/Clases/Conceptos basicos/build/
+/Tareas/Libro/nbproject/private/
+/Tareas/Libro/build/
+/Tareas/Libro/dist/
+/Tareas/TareaLibro/nbproject/private/
+/Tareas/ClaseLibro/nbproject/private/
+/Tareas/ClaseLibro/build/
