--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ diagramaBD.img
 /Tareas/TareaLibro/nbproject/private/
 /Tareas/ClaseLibro/nbproject/private/
 /Tareas/ClaseLibro/build/
+/Clases/ReutilizacionCodigo2209/nbproject/private/
+/Clases/ReutilizacionCodigo2209/build/
+/Clases/ReutilizacionCodigo2209/dist/
+/Clases/ReutilizandoCodigo2209/nbproject/private/
+/Clases/ReutilizandoCodigo2209/build/
+/Clases/ReutilizandoCodigo2209/dist/
