Actualizacion de Tarea

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ diagramaBD.img
 /Clases/ReutilizandoCodigo2209/nbproject/private/
 /Clases/ReutilizandoCodigo2209/build/
 /Clases/ReutilizandoCodigo2209/dist/
+/Tareas/Composicion/nbproject/private/
+/Tareas/Composicion/build/
+/Tareas/Composicion/dist/
