--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ diagramaBD.img
 /Tareas/Composicion/nbproject/private/
 /Tareas/Composicion/build/
 /Tareas/Composicion/dist/
+/Tareas/JavaBasico2209/nbproject/private/
+/Clases/JavaBasico2209/nbproject/private/
+/Clases/JavaBasico2209/build/
+/Clases/JavaBasico2209/dist/
