--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ diagramaBD.img
 /Clases/JavaBasico2209/nbproject/private/
 /Clases/JavaBasico2209/build/
 /Clases/JavaBasico2209/dist/
+/Tareas/CuentaHabiente/nbproject/private/
+/Tareas/Cuentahabiente/nbproject/private/
+/Tareas/TCuentahabiente/nbproject/private/
+/Tareas/PruebaEjemplo/nbproject/private/
+/Tareas/PruebaEjemplo/build/
