--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ diagramaBD.img
 /Tareas/TCuentahabiente/nbproject/private/
 /Tareas/PruebaEjemplo/nbproject/private/
 /Tareas/PruebaEjemplo/build/
+/Tareas/JavaBasico2209Parte2/nbproject/private/
+/Tareas/JavaBasico2209Parte2/build/
+/Tareas/JavaBasico2209Parte2/dist/
