--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ diagramaBD.img
 /Tareas/JavaBasico2209Parte2/nbproject/private/
 /Tareas/JavaBasico2209Parte2/build/
 /Tareas/JavaBasico2209Parte2/dist/
+/Clases/JavaBasico2209Parte2/nbproject/private/
+/Clases/JavaBasico2209Parte2/build/
+/Clases/JavaBasico2209Parte2/dist/
